<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <!-- date toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/previousButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/imge_bg"
            android:src="@drawable/previous_img_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/forwardButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/imge_bg"
            android:src="@drawable/next_img_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentDateLabel"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:gravity="center"
            android:textColor="#FF8500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@fonts/sourcesanspro_bold"
            app:layout_constraintLeft_toRightOf="@id/previousButton"
            app:layout_constraintRight_toLeftOf="@id/forwardButton"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- eventDays header -->
    <LinearLayout
        android:id="@+id/abbreviationsBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="#E9E9F0"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mondayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_monday"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/tuesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_tuesday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/wednesdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_wednesday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/thursdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_thursday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/fridayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_friday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/saturdayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_saturday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>

        <TextView
            android:id="@+id/sundayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/material_calendar_sunday"
            android:textStyle="bold"
            android:textColor="#A3A6B4"
            android:fontFamily="@fonts/sourcesanspro_bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.applandeo.materialcalendarview.extensions.CalendarViewPager
            android:id="@+id/calendarViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

</LinearLayout>